# gstreamer-tutorial

./: ReadMe.md
0_textnoop/: ReadMe.md
0_textnoop/appendix/: ReadMe.txt
0_textnoop/step0/: ReadMe.md  meson.build
0_textnoop/step0/src/: gsttext.c  gsttextnoop.c
0_textnoop/step1/: ReadMe.md
0_textnoop/step1/src/: gsttextnoop.c
0_textnoop/step2/: ReadMe.md  meson.build
0_textnoop/step2/src/: gsttextnoop.c
0_textnoop/step3/: ReadMe.md
0_textnoop/step3/src/: gsttextnoop.c  gsttextnoop.h
1_textparse/step0/: ReadMe.md  meson.build
1_textparse/step0/src/: gsttext.c  gsttextparse.c
1_textparse/step1/: ReadMe.md
1_textparse/step1/src/: gsttextparse.c  gsttextparse.h
1_textparse/step2/: ReadMe.md  meson.build
1_textparse/step2/src/: gsttextparse.c
1_textparse/step3/: ReadMe.md
1_textparse/step3/src/: gsttext.c  gsttextparse.c
